# Pixodoro

./: README.md  package.json  pnpm-lock.yaml
src/: App.tsx  constants.ts  hooks.ts  main.tsx  store.ts  styled.d.ts  styles.css  theme.ts  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AudioVolumeSlider.tsx  BurgerButton.tsx  Button.tsx  Clock.tsx  Container.tsx  Controls.tsx  InputField.tsx  PixelCircle.tsx  PixelIcon.tsx  PixelSizeInput.tsx  QuantityInput.tsx  SettingsGroup.tsx  SettingsMenu.tsx  ThemeSwitcher.tsx  Time.tsx
src/features/appSettings/: appSettingsSlice.ts
src/features/audio/: AudioVolume.tsx  audioSlice.ts  useAudio.ts
src/features/music/: Music.tsx  MusicSwitcher.tsx  MusicVolume.tsx  MusicVolumeSlider.tsx  musicSlice.ts  useMusic.ts
src/features/notification/: NotificationSwitcher.tsx  notificationSlice.ts  useNotification.ts
src/features/pixel/: PixelSize.tsx  pixelSlice.ts  usePixel.ts
src/features/pixelSize/: PixelSize.tsx  pixelSizeSlice.ts
src/features/theme/: PixelSize.tsx  ThemeSwitcher.tsx  theme.ts  themeSlice.ts
src/features/timer/: AutoModeSwitcher.tsx  Timer.tsx  TimerInput.tsx  timerSlice.ts
src/hooks/: index.ts  useAudio.ts  usePixelSize.ts  useTimer.ts  useTimer.tsx
src/types/: themeTypes.ts
